--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,2 +1,22 @@
 <h1>Cocktails#index</h1>
 <p>Find me in app/views/coktails/index.html.erb</p>
+
+<ul>
+
+  <% @cocktails.each do |cocktail| %>
+<li>
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+    <div class="card-body">
+      <h5><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h5>
+          <p class="card-text">
+          <% cocktail.doses.each do |dose| %>
+            <%=  "#{dose.description} of #{dose.ingredient.name}" %>
+            <% end %>
+          </p>
+    </div>
+  </div>
+</li>
+  <% end %>
+
+</ul>
