adding image upload and bin icons

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -9,7 +9,8 @@
         <h5><%= @cocktail.name %></h5>
             <p class="card-text">
             <% @cocktail.doses.each do |dose| %>
-              <%=  "#{dose.description} of #{dose.ingredient.name}" %>  <sup><%= link_to "delete", cocktail_dose_path(@cocktail, dose),
+              <%=  "#{dose.description} of #{dose.ingredient.name}" %>
+             <sup><%= link_to '<i class="fas fa-trash-alt"></i>'.html_safe, cocktail_dose_path(@cocktail, dose),
         method: :delete,
         data: { confirm: "Delete #{dose.description} of #{dose.ingredient.name}?" } %></sup><BR>
               <% end %>
