--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,12 +1,13 @@
 <h1>Cocktails#index</h1>
 <p>Find me in app/views/coktails/index.html.erb</p>
 
-<ul>
+<ul class="no_bullets">
 
   <% @cocktails.each do |cocktail| %>
 <li>
   <div class="card" style="width: 18rem;">
-    <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+      <img class="card-img-top" <%=image_tag("white_russian.jpg")%>
+
     <div class="card-body">
       <h5><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h5>
           <p class="card-text">
