--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background-image: linear-gradient(rgb(0, 0, 128), rgb(153, 153, 255));
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -8,5 +8,10 @@
 }
 
 .navbar-lewagon .navbar-brand img {
+  width: 40px;
+}
+
+.avatar-width {
+  height: 40px;
   width: 40px;
 }
