--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,23 +1,22 @@
-<h1>Cocktails#index</h1>
-<p>Find me in app/views/coktails/index.html.erb</p>
+<div class="index-cont">
+  <ul class="no_bullets">
 
-<ul class="no_bullets">
+    <% @cocktails.each do |cocktail| %>
+  <li>
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" <%=image_tag("white_russian.jpg")%>
 
-  <% @cocktails.each do |cocktail| %>
-<li>
-  <div class="card" style="width: 18rem;">
-      <img class="card-img-top" <%=image_tag("white_russian.jpg")%>
-
-    <div class="card-body">
-      <h5><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h5>
-          <p class="card-text">
-          <% cocktail.doses.each do |dose| %>
-            <%=  "#{dose.description} of #{dose.ingredient.name}" %>
-            <% end %>
-          </p>
+      <div class="card-body">
+        <h5><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h5>
+            <p class="card-text">
+            <% cocktail.doses.each do |dose| %>
+              <%=  "#{dose.description} of #{dose.ingredient.name}" %>
+              <% end %>
+            </p>
+      </div>
     </div>
-  </div>
-</li>
-  <% end %>
+  </li>
+    <% end %>
 
-</ul>
+  </ul>
+</div>
