--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,4 +1,6 @@
 <h1>Doses#new</h1>
 <p>Find me in app/views/doses/new.html.erb</p>
 
+<div class="centering">
 <%= render 'form', dose: @dose %>
+</div>
