--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,11 +2,12 @@
   <ul class="no_bullets">
 <% place_holder =  image_path('white_russian.jpg')%>
     <% @cocktails.each do |cocktail| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-         url(<%= cl_image_path cocktail.photo.key, :height => 250, :crop => :fill if cocktail.photo.attached? %>);">
-      <h6><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h6>
-    </div>
-  </li>
+      <li>
+        <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
+             url(<%= cl_image_path cocktail.image.key, :height => 250, :crop => :fill if cocktail.image.attached? %>);">
+          <h6><%= link_to "#{cocktail.name}", cocktail_path(cocktail) %></h6>
+        </div>
+      </li>
     <% end %>
 
   </ul>
