added some more styles

--- a/app/assets/stylesheets/cocktails/_index.scss
+++ b/app/assets/stylesheets/cocktails/_index.scss
@@ -11,10 +11,26 @@
   width: 15em;
 }
 
-.card-category {
+.card-category-first {
+  padding: 5px;
   color: white;
   height: 200px;
-  width: 48%;
+  width: 42%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  border-radius: 2px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+.card-category-second {
+  padding: 5px;
+  color: white;
+  height: 200px;
+  width: 42%;
   display: flex;
   justify-content: center;
   align-items: center;
