--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -7,7 +7,7 @@
       <% if cocktail.image.attached? %>
         <li>
           <div class="<%= cocktail.id.even? ? "card-category-first" :  "card-category-second" %>" id="boo" style='background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)),
-            url(cl_image_path cocktail.image.key,  :crop => :fill);'>
+            url( <%= cl_image_path cocktail.image.key, :crop => :fill  %> );'>
             <h6><%= link_to cocktail.name, cocktail_path(cocktail) %></h6>
           </div>
         </li>
